Add cluster configuration jsonschema validation
This patch adds a jsonschema validation for the cluster configuration.
The schema is automatically fetched from [^1].

It is used for `source.yml`, `config.yml`, and `cluster.yml` files and
uses RedHat YAML schema extension.

[^1]: https://download.tarantool.org/tarantool/schema/config.schema.json
[^2]: https://github.com/redhat-developer/vscode-yaml

--- a/package.json
+++ b/package.json
@@ -24,7 +24,13 @@
     "commands": [
       {
         "command": "tarantool-vscode.init",
-        "title": "Initialize Tarantool environment"
+        "title": "Tarantool: Initialize environment"
+      }
+    ],
+    "yamlValidation": [
+      {
+        "fileMatch": [ "cluster.yml", "cluster.yaml", "config.yml", "config.yaml", "source.yml", "source.yaml" ],
+        "url": "https://download.tarantool.org/tarantool/schema/config.schema.json"
       }
     ]
   },
@@ -55,6 +61,7 @@
     "webpack-cli": "^6.0.1"
   },
   "extensionDependencies": [
-    "tangzx.emmylua"
+    "tangzx.emmylua",
+    "redhat.vscode-yaml"
   ]
 }
