Add support for TT `start` and `stop` commands
This patch adds a few commands to the command pallete to start and stop
the Tarantool clusters using `tt` utility [^1].

The support is really basic. It can only start and stop the whole
cluster.

[^1]: https://github.com/tarantool/tt.

--- a/package.json
+++ b/package.json
@@ -23,8 +23,20 @@
   "contributes": {
     "commands": [
       {
+        "command": "tarantool-vscode.init-vs",
+        "title": "Tarantool: Initialize VSCode extension in existing app"
+      },
+      {
         "command": "tarantool-vscode.init",
-        "title": "Tarantool: Initialize environment"
+        "title": "Tarantool: Initialize application (tt)"
+      },
+      {
+        "command": "tarantool-vscode.start",
+        "title": "Tarantool: Start cluster (tt)"
+      },
+      {
+        "command": "tarantool-vscode.stop",
+        "title": "Tarantool: Stop cluster (tt)"
       }
     ],
     "yamlValidation": [
