Add install Tarantool CE command
This patch adds command for installing Tarantool CE from sources. The
command fetches the tags using octokit API and allows user to choose
from the latest Tarantool releases to install from.

--- a/package.json
+++ b/package.json
@@ -50,6 +50,10 @@
       {
         "command": "tarantool.restart",
         "title": "Tarantool: Restart cluster (tt)"
+      },
+      {
+        "command": "tarantool.install-ce",
+        "title": "Tarantool: Install Tarantool Community Edition (tt)"
       }
     ],
     "yamlValidation": [
