--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,12 +24,18 @@ jobs:
       uses: actions/setup-node@v3
       with:
           node-version: 20.x
+    - name: Setup TT
+      run: |
+        curl -L https://tarantool.io/release/3/installer.sh | bash
+        sudo apt-get install tt
     - name: Build
       run: npm i
     - name: Lint
       run: npm run lint
     - name: Package
       run: npx vsce package -o tarantool-vscode-${{ matrix.target }}.vsix --target ${{ matrix.target }}
+    - name: Test
+      run: xvfb-run -a npm run test
     - name: Upload
       uses: actions/upload-artifact@v4
       with:
