--- a/package.json
+++ b/package.json
@@ -84,14 +84,19 @@
   },
   "devDependencies": {
     "@octokit/core": "^5",
+    "@types/chai": "^5.2.1",
+    "@types/chai-spies": "^1.0.6",
     "@types/command-exists": "^1.2.3",
     "@types/mocha": "^10.0.10",
     "@types/node": "20.x",
+    "@types/proxyquire": "^1.3.31",
     "@types/vscode": "^1.98.0",
     "@typescript-eslint/eslint-plugin": "^8.28.0",
     "@typescript-eslint/parser": "^8.28.0",
     "@vscode/test-cli": "^0.0.10",
     "@vscode/test-electron": "^2.4.1",
+    "chai": "^4.2.0",
+    "chai-spies": "^1.1.0",
     "command-exists": "^1.2.9",
     "copy-webpack-plugin": "^13.0.0",
     "eslint": "^9.23.0",
