Don't use tarantool-emmylua as a submodule
This patch makes the extension not use `tarantool-emmylua` as a
submodule. Instead the Tarantool-specific are stored within the
repository in `tarantool-annotations` dir.

--- a/.vscodeignore
+++ b/.vscodeignore
@@ -14,5 +14,5 @@ vsc-extension-quickstart.md
 **/.vscode-test.*
 .github/**
 .gitmodules
-tarantool-emmylua/**
+tarantool-annotations/**
 examples/**
